# ByteTalk

./: README.md
ChatService/: CMakeLists.txt
ChatService/include/: ChatServer.hpp  Redis.hpp
ChatService/src/: CMakeLists.txt  ChatServer.cpp  ChatServer.pb.cc  LogServer.pb.cc  ProxyServer.pb.cc  Redis.cpp  run.cpp
FriendService/: CMakeLists.txt
FriendService/auxiliary_process/: CMakeLists.txt
FriendService/auxiliary_process/FriendServer/include/: FriendServer.hpp  FriendServer.pb.h  User.hpp  ZooKeeperFow.hpp
FriendService/auxiliary_process/FriendServer/proto/: FriendServer.proto
FriendService/auxiliary_process/FriendServer/src/: CMakeLists.txt  FriendServer.cpp  FriendServer.pb.cc  run.cpp
FriendService/configure/: mysql.conf
FriendService/example/: FriendService.pb.h  main.cpp
FriendService/include/: FriendService.hpp  LogServer.pb.h  ZooKeeperMaster.hpp
FriendService/proto/: FriendService.proto
FriendService/src/: CMakeLists.txt  FriendServer.pb.cc  FriendService.cpp  run.cpp
GroupService/: CMakeLists.txt
GroupService/auxiliary_process/: CMakeLists.txt
GroupService/auxiliary_process/GroupServer/include/: GroupServer.hpp  GroupServer.pb.h
GroupService/auxiliary_process/GroupServer/src/: CMakeLists.txt  (+3 more)
GroupService/include/: ChatService.pb.h  GroupServer.pb.h  GroupService.hpp  GroupService.pb.h
GroupService/proto/: ChatService.proto  GroupServer.proto  GroupService.proto
GroupService/src/: CMakeLists.txt  ChatService.pb.cc  GroupService.cpp  run.cpp
LogServer/: CMakeLists.txt  README.md
LogServer/auxiliary_process/: CMakeLists.txt
LogServer/include/: LogServer.hpp
LogServer/log/Server/: 2021-4-19_log.txt  2021-4-20_log.txt
LogServer/log/User/: 2021- 4-19_log.txt  2021-4-19_log.txt
LogServer/proto/: LogServer.proto
LogServer/src/: CMakeLists.txt  LogServer.cpp  main.cpp  run.cpp
OfflineService/: CMakeLists.txt
OfflineService/auxiliary_process/: CMakeLists.txt
OfflineService/include/: OfflineService.hpp  OfflineService.pb.h
OfflineService/src/: CMakeLists.txt  OfflineServer.pb.cc  OfflineService.cpp  OfflineService.pb.cc  run.cpp
Porxy/: CMakeLists.txt
Porxy/include/: PorxyServer.hpp  ProxyServer.hpp  ProxyService.hpp  Redis.hpp
Porxy/include/proto/: ChatServer.pb.h  GroupService.pb.h  ProxyServer.pb.h
Porxy/proto/: ChatServer.proto  FriendService.proto  GroupService.proto  OfflineService.proto  ProxyServer.proto  UserService.proto
Porxy/src/: CMakeLists.txt  ProxyServer.cpp  ProxyService.cpp  Redis.cpp  ZooKeeperMatser.cpp  main.cpp
Porxy/src/proto/: FriendService.pb.cc  GroupService.pb.cc  ProxyServer.pb.cc
UserService/: CMakeLists.txt  README.md  about UserService.md
UserService/auxiliary_process/: CMakeLists.txt
UserService/configure/: mysql.conf
UserService/example/: CMakeLists.txt  main.cpp
UserService/include/: UserService.hpp  UserService.pb.h
UserService/proto/: LogServer.proto  UserServer.proto  UserService.proto
UserService/src/: CMakeLists.txt  UserServer.pb.cc  UserService.cpp  UserService.pb.cc  ZooKeeperMatser.cpp  run.cpp
(+23 files in other folders)
